--- a/v2/src/main/resources/application.properties
+++ b/v2/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:h2:tcp://localhost/~/testdb
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.h2.console.enabled=true 
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.show_sql = true
 logging.level.hibernate.SQL=debug
 
-elasticsearch.url = 192.168.64.4:9200
+#elasticsearch.url = 192.168.64.4:9200
+# in docker Engine
+elasticsearch.url = 127.0.0.1:9200 
 logging.level.org.springframework.data.elasticsearch.client.WIRE = TRACE
